2008-07-21  John W. Eaton  <jwe@octave.org>

	* regex-match.cc (regex_match::init): Initialize err to 0.

2008-07-19  John W. Eaton  <jwe@octave.org>

	* oct-mutex.h (class octave_base_mutex): New class.
	(class octave_mutex): Don't use union for rep and count.
	(octave_mutex::rep): Declare as octave_base_mutex.
	(octave_mutex::count): Delete.
	(octave_mutex::lock, octave_mutex::unlock): No longer virtual.
	(octave_mutex::~octave_mutex): No need to check that rep is
	valid or set rep to zero after deleting.
	(octave_mutex::operator =): No need to check that rep is valid.
	* oct-mutex.cc (octave_w32_mutex, octave_pthread_mutex): Derive
	from octave_base_mutex, not octave_mutex.

2008-07-18  John W. Eaton  <jwe@octave.org>

	* oct-mutex.h (octave_mutex::octave_mutex (int)): Initialize rep
	to 0, not count.
	* oct-mutex.cc (octave_mutex::octave_mutex (void)): Set rep->count
	to 1 instead of incrementing it.

2008-07-17  Michael Goffioul  <michael.goffioul@gmail.com>

	* dNDArray.cc: Do not include ctor NDArray(Array<octave_idx_type>,
	bool, bool) into conditional HAVE_FFTW3 preprocessor statement.

2008-07-16  John W. Eaton  <jwe@octave.org>

	* oct-mutex.h (octave_autolock::octave_autolock (void),
	octave_autolock (const octave_autolock&),
	octave_autolock::operator = (const octave_autolock&)):
	Delete definitions.

2008-07-16  Michael Goffioul  <michael.goffioul@gmail.com>

	* cmd-edit.cc (event_hook_lock): New static mutex variable.
	(command_editor::event_handler): Lock and copy event_hook_set before
	executing handlers.
	(command_editor::add_event_hook, command_editor::remove_event_hook):
	Autolock event_hook_lock.

2008-07-15  Michael Goffioul  <michael.goffioul@gmail.com>

	* oct-mutex.h, oct-mutex.cc: New files.
	* Makefile.in: Add them to appropriate lists.

2008-07-15  John W. Eaton  <jwe@octave.org>

	* oct-sort.cc, oct-sort.h (octave_sort<T>::count_run): Declare
	descending arg as bool&.
	(octave_sort<T>::sort): Pass bool to count_run for descending arg.
