@@ -1,3 +1,11 @@
+2008-07-21  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* oct-mutex.h (octave_base_mutex::octave_base_mutex): Initialize
+	count to 1, not -1.
+
+	* oct-mutex.cc (octave_base_mutex::lock, octave_base_mutex::unlock):
+	Replace error calls with (*current_liboctave_error_handler).
+
 2008-07-21  John W. Eaton  <jwe@octave.org>
 
 	* regex-match.cc (regex_match::init): Initialize err to 0.
